# SpectreLink

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.c
client/src/methods/: layer7.c
client/src/methods/includes/: layer3.h  layer4.h  layer7.h
client/src/proto/: connection.c  deserializer.c  protocol.c
client/src/proto/includes/: connection.h  protocol.h
client/src/protocol/: bot_info.c  connection.c  packet.c  protocol.c
client/src/protocol/includes/: bot_info.h  protocol.h
client/src/utils/: common.c  debug.c  socket.c  spectre_time.c  urlparser.c
client/src/utils/includes/: common.h  debug.h  spectre_def.h  spectre_time.h  urlparser.h
server/: go.md  go.mod  go.sum  main.go
server/admin/: spectrelink.go  telnet.go
server/admin/user/: auth.go  banner.txt  commands.go  manager.go  message.go  methods.go  seesion.go
server/bot/: bot.go  server.go
server/bot/proto/: argtype_string.go  bytecode_string.go  data.go  packet.go  packetid.go  packetid_string.go  packettype_string.go  protocol.go  requesttype_string.go  serializer.go
server/log/: loghelper.go
server/telnet/: telnet.go
